# polkadot-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/jsonrpsee/: Cargo.toml
examples/jsonrpsee/examples/: get_blockhash.rs  get_chain_spec.rs
examples/polkadot/: Cargo.toml
examples/polkadot/examples/: get_blockhash.rs
examples/rpc/: Cargo.toml
examples/rpc/examples/: http_get_blockhash.rs  sc_get_blockhash.rs  ws_get_blockhash.rs
examples/smoldot/: Cargo.toml
examples/smoldot/examples/: get_blockhash.rs  get_chain_spec.rs  get_parachain_blockhash.rs
rpc_core/: Cargo.toml
rpc_core/src/: lib.rs
rpc_provider/: Cargo.toml  README.md
rpc_provider/src/: defaults.rs  error.rs  helpers.rs  lib.rs  mac.rs  primitives.rs  types.rs
rpc_provider/src/jsonrpsee/: mod.rs  subscription.rs
rpc_provider/src/providers/: mod.rs  types.rs
rpc_provider/src/providers/http/: mod.rs
rpc_provider/src/providers/light_client/: mod.rs
rpc_provider/src/providers/ws/: mod.rs  subscription.rs
rpc_provider/src/rpc/: mod.rs
rpc_provider/src/rpc/jsonrpsee/: mod.rs
rpc_provider/src/rpc/smoldot/: mod.rs
rpc_provider/src/ws/: error.rs  mod.rs
src/: lib.rs
types_support/: Cargo.toml
types_support/src/: chain_spec.rs  lib.rs
types_support/src/metadata/: mod.rs
types_support/src/metadata/v15/: kusama_rpc.rs  mod.rs  polkadot_rpc.rs
