[package]
name = "rpc_provider"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "jsonrpsee-client"]
# Use the `jsonrpsee` crate for websocket communication. Does only provide async support and needs a tokio runtime.
# Provides convenience functions such as subscription callbacks.
# Most examples use the `jsonrpsee` feature and can be used for reference.
jsonrpsee-client = ["std", "jsonrpsee"]
# Enables all std features of dependencies in case of std build.
std = ["serde/std", "serde_json/std", "url"]

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
maybe-async = { version = "0.2.7" }
async-trait = "0.1.68"

sp-core = { default-features = false, features = [
 "full_crypto",
 "serde",
], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
# websocket dependent features
jsonrpsee-http-client = "0.22.2"
jsonrpsee = { version = "0.22", optional = true, features = [
 "async-client",
 "client-ws-transport-native-tls",
 "jsonrpsee-types",
] }

# crates.io std only
url = { version = "2.0.0", optional = true }
smoldot-light = "0.15.0"
